--- a/9c/package.json
+++ b/9c/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "tsc": "tsc",
     "dev": "ts-node-dev index.ts",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "start": "node build/index.js"
   },
   "dependencies": {
     "express": "^5.1.0"
