--- a/9c/package.json
+++ b/9c/package.json
@@ -3,6 +3,7 @@
     "@eslint/js": "^9.35.0",
     "@stylistic/eslint-plugin": "^5.3.1",
     "@types/express": "^5.0.3",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.35.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2",
@@ -15,6 +16,7 @@
     "start": "node build/index.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "uuid": "^8.3.2"
   }
 }
